	added Reflect.compare
	fixed "".split() in Neko (now returns [""] instead of [])
	bugfix for swf-lib f9 classes ordering
	added EReg.customReplace
	added neko.Lib.lazyLoad and improved neko.net.Poll for Neko 1.6.1
	prevented static fields in interfaces
	added neko.Sys.cpuTime()
	fix for protected as3 classes
	added support for flash9 XML (in flash.xml package)
	added neko.vm.Tls for Neko 1.6.1

2008-01-13: 1.17
	fixed Int32.compare, added Int32.read and Int32.write
	fixed type of unitialized registers in flash9
	fixed Sqlite transactions (commit and rollback now restart a transaction)
	several flash9 optimizations
	flash9 debug support (with -D fdb)
	set align to TopLeft if not defined for flash9
	added neko.vm.Gc
	fixed Null should not be a value
	bugfix in serialization format with USE_ENUM_INDEXES
	added apis in DateTools for time manipulation
	bugfix in flash9 : strictly typed local vars used in local functions
	always force swf version and sandbox redefinition
	added as3hl layer
	merge as3 classes
	use flash9 fast switch for enums
	always use match for enums (no switch even if constant)
	fixed DateTools.format %I and %l in Flash/JS
	securized Hash for JS and Flash
	compiletime F9 class generation for F8 swflib
	optimized for loops (Array and IntIter)
	added #line support
	more f9 Null<T> support for "if" and array declarations
	more neko.Web.setCookie parameters
	added "inline" for methods and static vars
	fixed % type in flash9

2007-10-31: 1.16
	use _sans font for default flash traces (better Linux support)
	fixed haxe.remoting.Connection compilation for Flash<8
	added fix to prevent 64K identifiers limit on Flash<9
	ensure order of anonymous fields initialization
	fixed haxe.remoting.Connection.urlConnect in JS
	use amortized O(1) for Neko Array implementation
	ndlls libraries should now use .neko() instead of __a
	allowed 'u' utf8 for regexp (needs Neko 1.6.1 regexp.ndll on windows)
	onclick and onsubmit JS events returns Bool